Fixing quotations for font family with white space

--- a/css/general.css
+++ b/css/general.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1{
-    font-family:Gill Sans, sans-serif;
+    font-family:"Gill Sans", sans-serif;
     font-size: 2rem;
     font-weight: bold;
     color: #006699;
